--- a/flask-apps/templates/index.html
+++ b/flask-apps/templates/index.html
@@ -10,6 +10,10 @@
 		    xmlHttp.open("GET", theUrl, true); // true for asynchronous
 		    xmlHttp.send(null);
 		}
+
+		httpGetAsync('http://127.0.0.1:5000/store', function(res) {
+			alert(res);
+		});
 	</script>
 </head>
 	<body>
